--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="grid gap-4 md:grid-cols-3">
           <!-- images -->
           <div class="relative group">
-            <img src="images/image1.jpg" alt="" class="w-72" />
+            <img src="images/fb1.jpg" alt="" class="w-72" />
             <div
               class="absolute bottom-0 left-0 right-0 p-2 px-4 text-white duration-500 bg-black opacity-0 group-hover:opacity-100 bg-opacity-40"
             >
@@ -100,7 +100,7 @@
             </div>
           </div>
           <div class="relative group">
-            <img src="images/image2.jpg" alt="" class="w-72" />
+            <img src="images/fb2.jpg" alt="" class="w-72" />
             <div
               class="absolute bottom-0 left-0 right-0 p-2 px-4 text-white duration-500 bg-black opacity-0 group-hover:opacity-100 bg-opacity-40"
             >
@@ -116,7 +116,7 @@
             </div>
           </div>
           <div class="relative group">
-            <img src="images/image3.jpg" alt="" class="w-72" />
+            <img src="images/fb10.jpg" alt="" class="w-72" />
             <div
               class="absolute bottom-0 left-0 right-0 p-2 px-4 text-white duration-500 bg-black opacity-0 group-hover:opacity-100 bg-opacity-40"
             >
@@ -132,7 +132,7 @@
             </div>
           </div>
           <div class="relative group">
-            <img src="images/image4.jpg" alt="" class="w-72" />
+            <img src="images/fb15.jpg" alt="" class="w-72" />
             <div
               class="absolute bottom-0 left-0 right-0 p-2 px-4 text-white duration-500 bg-black opacity-0 group-hover:opacity-100 bg-opacity-40"
             >
@@ -148,7 +148,7 @@
             </div>
           </div>
           <div class="relative group">
-            <img src="images/image5.jpg" alt="" class="w-72" />
+            <img src="images/fb13.jpg" alt="" class="w-72" />
             <div
               class="absolute bottom-0 left-0 right-0 p-2 px-4 text-white duration-500 bg-black opacity-0 group-hover:opacity-100 bg-opacity-40"
             >
@@ -164,7 +164,7 @@
             </div>
           </div>
           <div class="relative group">
-            <img src="images/image6.jpg" alt="" class="w-72" />
+            <img src="images/fb11.jpg" alt="" class="w-72" />
             <div
               class="absolute bottom-0 left-0 right-0 p-2 px-4 text-white duration-500 bg-black opacity-0 group-hover:opacity-100 bg-opacity-40"
             >
